--- a/admin/view/Goods/add1.html
+++ b/admin/view/Goods/add1.html
@@ -1,35 +1,54 @@
-<?php include './admin/view/public/header.html';?>
+<?php include "./admin/view/Public/header.html"; ?>
 <!-- *********内容************* -->
 <div style="width:500px">
-	<div>
-		<a class="btn btn-default" href="index.php?m=admin&c=goods&a=add1">增加</a>
-	</div>
-	<div style="margin-top:10px">
-		<table class="table">
-	    	<tr>
-	    		<td>Id</td>
-	    		<td>名称</td>
-	    		<td>简介</td>
-	    		<td>价格</td>
-	    		<td>分类id</td>
-	    		<td>状态</td>
-	    		<td>操作</td>
-	    	</tr>
-	    	<?php foreach($res as $key=>$value){ ?>
-	    	<tr>
-	    		<td><?php echo $value['id'] ?></td>
-	    		<td><?php echo $value['name'] ?></td>
-	    		<td><?php echo $value['second_name'] ?></td>
-	    		<td><?php echo $value['price'] ?></td>
-	    		<td><?php echo $value['classify_id'] ?></td>
-	    		<td><?php echo $value['flag'] ?></td>
-	    		<td>
-	    			<a href="index.php?m=admin&c=goods&a=delete2&id=<?php echo $value['id'];?>">删除</a>
-	    		</td>
-	    	</tr>
-	    	<?php } ?>
-	    </table>
-	</div> 
+    <form class="form-horizontal" action="index.php?m=admin&c=goods&a=save1" method="post" enctype='multipart/form-data'>
+	  <div class="form-group">
+	    <label for="inputEmail3" class="col-sm-2 control-label">名称：</label>
+	    <div class="col-sm-10">
+	      <input type="text" class="form-control" id="inputEmail3" placeholder="名称" name="name">
+	    </div>
+	  </div>
+	  <div class="form-group">
+	    <label for="inputPassword3" class="col-sm-2 control-label">简介：</label>
+	    <div class="col-sm-10">
+	      <input type="text" class="form-control" id="inputPassword3" placeholder="简介" name="second_name">
+	    </div>
+	  </div>
+	  <div class="form-group">
+	    <label for="inputPassword3" class="col-sm-2 control-label">价格：</label>
+	    <div class="col-sm-10">
+	      <input type="text" class="form-control" id="inputPassword3" placeholder="价格" name="price">
+	    </div>
+	  </div>
+	  <div class="form-group">
+	    <label for="inputPassword3" class="col-sm-2 control-label">图片：</label>
+	    <div class="col-sm-10">
+	      <input type="file" class="form-control" id="inputPassword3" placeholder="图片" name="pic">
+	    </div>
+	  </div>
+	  <div class="form-group">
+	    <label for="inputPassword3" class="col-sm-2 control-label">分类:</label>
+	    <div class="col-sm-10">
+	      <select name="classify_id" id="classify_id">
+	      	<?php foreach($classify_list as $key=>$value){ ?>
+	      	<option value="<?php echo $value['id']?>"><?php echo $value['name']?></option>
+	      	<?php } ?>
+	      </select>
+	    </div>
+	  </div>
+	  <div class="form-group">
+	    <label for="inputPassword3" class="col-sm-2 control-label">状态：</label>
+	    <div class="col-sm-10">
+	     	<input type='radio' name='flag' value='1'>新品
+	     	<input type='radio' name='flag' value='2'>包邮
+	    </div>
+	  </div>
+	  <div class="form-group">
+	    <div class="col-sm-offset-2 col-sm-10">
+	      <button type="submit" class="btn btn-default">提交</button>
+	    </div>
+	  </div>
+	</form>
 </div>
 <!-- *********内容************* -->
-<?php include "./admin/view/public/footer.html"; ?> 
+<?php include "./admin/view/Public/footer.html"; ?> 
