--- a/admin/view/Goods/index.html
+++ b/admin/view/Goods/index.html
@@ -28,6 +28,24 @@
 	    	</tr>
 	    	<?php } ?>
 	    </table>
+	     <style>
+			.ma li {float:left;margin:10px;background:#ccc;
+				list-style: none;padding:10px;}
+			.current {background:blue !important;}
+	    </style>
+	    <ul class="ma">
+	    	<?php if ($p != 1) { ?>
+	    	<li><a href="index.php?m=admin&c=goods&a=index&p=1">首页</a></li>
+	    	<li><a href="index.php?m=admin&c=goods&a=index&p=<?php echo $p-1?>">上一页</a></li>
+	    	<?php } ?>
+	    	<?php for($i=1;$i<$page_num+1;$i++) { ?>
+	    	<li <?php if($p == $i) {echo "class='current'";}?>><a href="index.php?m=admin&c=goods&a=index&p=<?php echo $i;?>"><?php echo $i;?></a></li>
+	    	<?php } ?>
+	    	<?php if ($p != $page_num) { ?>
+	    	<li><a href="index.php?m=admin&c=goods&a=index&p=<?php echo $p+1?>">下一页</a></li>
+	    	<li><a href="index.php?m=admin&c=goods&a=index&p=<?php echo $page_num?>">尾页</a></li>
+	    	<?php } ?>
+	    </ul>
 	</div> 
 </div>
 <!-- *********内容************* -->
